tests/snapshots/cli_snapshots__transactions_clear_recurring_table_snapshot.snap
---
source: tests/cli_snapshots.rs
assertion_line: 179
expression: "run_fail(&[\"--yes\", \"transactions\", \"clear-recurring\", \"txn_1\"])"
---
Error: clearing recurring is not supported by Copilot’s web GraphQL API (no known mutation); please clear it in the Copilot app for now
